cmake_minimum_required(VERSION 3.20)
project(ase-rendu C)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

set(CMAKE_C_STANDARD 99)

add_executable(ouvrir ouvrir.c asem.h asem.c shm.h shm.c)
add_executable(fermer fermer.c asem.h asem.c shm.h shm.c)
add_executable(nettoyer nettoyer.c asem.h asem.c shm.h shm.c)
add_executable(medecin medecin.c asem.h asem.c shm.h shm.c)
add_executable(patient patient.c asem.h asem.c shm.h shm.c)
add_executable(show show.c asem.h asem.c shm.h shm.c)
target_link_libraries(ouvrir PRIVATE Threads::Threads rt g)
target_link_libraries(fermer PRIVATE Threads::Threads rt g)
target_link_libraries(nettoyer PRIVATE Threads::Threads rt g)
target_link_libraries(medecin PRIVATE Threads::Threads rt g)
target_link_libraries(patient PRIVATE Threads::Threads rt g)
target_link_libraries(show PRIVATE Threads::Threads rt g)